--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                 <h2 class="text-xl font-semibold text-gray-700 mb-4 border-b pb-2">Profile Setup Required</h2>
                 <div class="p-4 bg-yellow-50 border-l-4 border-yellow-400 rounded-lg text-sm text-yellow-700">
                     <p class="font-medium">Welcome!</p>
-                    <p>To join or create a group, please save your unique display name and primary home locality. **Use a clear city or locality name** (e.g., 'Bengaluru' or 'London') to prevent geocoding errors.</p>
+                    <p>To join or create a group, please save your unique display name and primary home locality. **You can enter your Pin Code/Postal Code here** (e.g., 560013).</p>
                 </div>
                 <form id="profile-form" class="space-y-4">
                     <div>
@@ -105,7 +105,7 @@
                     </div>
                     <div>
                         <label for="home-locality" class="block text-sm font-medium text-gray-700 mb-1">Primary Home Locality/Address</label>
-                        <input type="text" id="home-locality" required placeholder="e.g., Jalahalli, Bengaluru or East Village, NYC" class="w-full p-3 border border-gray-300 rounded-lg focus:ring-pink-500 focus:border-pink-500">
+                        <input type="text" id="home-locality" required placeholder="Enter your Pin Code (e.g., 560013)" class="w-full p-3 border border-gray-300 rounded-lg focus:ring-pink-500 focus:border-pink-500">
                     </div>
                     <button type="submit" id="save-profile-btn" class="w-full text-white font-semibold py-3 rounded-xl bg-pink-500 hover:bg-pink-600 transition">
                         <span class="flex items-center justify-center">
@@ -388,7 +388,10 @@
         // =========================================================================
 
         async function geocodeAddress(address) {
-            const endpoint = `${GEOCODE_URL}?address=${encodeURIComponent(address)}`;
+            // Modification: Append Country to help resolve Pin Codes
+            const addressWithCountry = `${address}, India`; // <-- MODIFICATION FOR PIN/POSTAL CODE RESOLUTION
+
+            const endpoint = `${GEOCODE_URL}?address=${encodeURIComponent(addressWithCountry)}`;
             
             try {
                 const response = await fetch(endpoint, {
@@ -714,18 +717,18 @@
             const homeLocality = HOME_LOCALITY_INPUT.value.trim();
 
             if (!displayName || !homeLocality) {
-                showStatus('Display Name and Home Locality are required.', true);
+                showStatus('Display Name and Home Locality (Pin Code) are required.', true);
                 setButtonLoading(false, SAVE_PROFILE_BTN);
                 return;
             }
 
             try {
-                showStatus('Verifying address via Latlong.ai Geocoding...', false);
+                showStatus('Verifying Pin Code via Latlong.ai Geocoding...', false);
                 const coords = await geocodeAddress(homeLocality);
 
                 if (!coords) {
                     // Specific error handling for geocoding failure
-                    throw new Error("Could not find precise coordinates for the provided address. Please check and use a clear city, town, or well-known location name.");
+                    throw new Error("Could not find precise coordinates for the provided address/Pin Code. Please double-check the number or try a clearer locality name.");
                 }
 
                 userProfile = {
@@ -871,13 +874,13 @@
             PARTICIPANTS_LIST.innerHTML = participants.map(p => {
                 const isCurrent = p.userId === userId;
                 const badge = isCurrent ? `<span class="bg-indigo-200 text-indigo-800 text-xs font-semibold px-2 py-0.5 rounded ml-2">You</span>` : '';
-                const coordsDisplay = p.lat && p.lon ? `[${p.lat.toFixed(4)}, ${p.lon.toFixed(4)}]` : `<span class="text-red-500">Address needs re-save</span>`;
+                const coordsDisplay = p.lat && p.lon ? `[${p.lat.toFixed(4)}, ${p.lon.toFixed(4)}]` : `<span class="text-red-500 font-bold">ADDRESS FAILED</span>`;
                 
                 return `
                     <div class="text-sm ${isCurrent ? 'font-bold text-indigo-700' : 'text-gray-700'} border-b border-gray-100 p-1 last:border-b-0">
                         ${p.displayName}${badge}
                         <span class="text-xs text-gray-500 italic block mt-0.5">
-                            Home: ${p.homeLocality}
+                            Pin Code: ${p.homeLocality}
                             <span class="ml-2">Coords: ${coordsDisplay}</span>
                         </span>
                     </div>
