--- a/index.html
+++ b/index.html
@@ -217,12 +217,13 @@
         
         // --- Firebase Config (REPLACE WITH YOUR ACTUAL CONFIG) ---
         const firebaseConfig = {
-            apiKey: "YOUR_API_KEY",
-            authDomain: "YOUR_AUTH_DOMAIN",
-            projectId: "YOUR_PROJECT_ID",
-            storageBucket: "YOUR_STORAGE_BUCKET",
-            messagingSenderId: "YOUR_MESSAGING_SENDER_ID",
-            appId: "YOUR_APP_ID"
+            apiKey: "AIzaSyBr2D6zEFX3u1wQTXE8aTgHFw5EeIUnsPE",
+            authDomain: "html-9bee0.firebaseapp.com",
+            projectId: "html-9bee0",
+            storageBucket: "html-9bee0.firebasestorage.app",
+            messagingSenderId: "893745664576",
+            appId: "1:893745664576:web:1e74ae24e1c9e9bba685a5",
+            measurementId: "G-9DYC404SP0"
         };
 
         // --- Latlong.ai API Configuration (REPLACE WITH YOUR TOKEN) ---
