--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
         };
 
         // --- Latlong.ai API Configuration (REPLACE WITH YOUR TOKEN) ---
-        const LATLONG_API_TOKEN = 'YOUR_LATLONG_API_TOKEN'; 
+        const LATLONG_API_TOKEN = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJUb2tlbklEIjoiMzNmMjY3MTgtMjRiOC00NTFlLWJlMGYtOGZmMzA1ZDI3ZDk5IiwiQ2xpZW50SUQiOiI2YTA3ZDNkMC01MTNkLTRjMTMtYjRjMi04NTdiY2YzNDJiNWIiLCJCdW5pdElEIjozMCwiQXBwTmFtZSI6InBlcyBoYWNrYXRob24gbWFwcy1yZWltYWdpbmVkIiwiQXBwSUQiOjE4Mzk1LCJUaW1lU3RhbXAiOiIyMDI1LTExLTI4IDE3OjEyOjUyIiwiZXhwIjoxNzY0NTIyNzcyfQ.q5AqBLmiB3KlPMt58O5N767uBJ6qNxGmt6X2aYWtrbI'; 
         const GEOCODE_URL = 'https://api.latlong.ai/geocode';
         const DISTANCE_URL = 'https://api.latlong.ai/distance-matrix';
         const LANDMARK_URL = 'https://api.latlong.ai/landmarks';
