--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
           integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY="
           crossorigin=""/>
     <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"
-            integrity="sha256-20n6a9J2u7S3/1Xk6+ttTq90wAEWn/MTo6eGBi8CE4M="
+            integrity="sha256:20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo="
             crossorigin=""></script>
     
     <style>
